tests/snapshot/error/source_locations/expression/yield_star/async_iterator_close_finish_throws_module.js
var iterable = {
  [Symbol.asyncIterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      return() {
        return 1;
      }
    }
  }
};

async function *generator() {
  yield* iterable;
}

var iter = generator();
await iter.next();
await iter.throw();